--- a/01_intro/homework/homework.ipynb
+++ b/01_intro/homework/homework.ipynb
@@ -465,6 +465,20 @@
     "rmse = root_mean_squared_error(y_pred_val, y_val)\n",
     "print(f\"RMSE: {rmse:.2f} minutes\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b005ab47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## export the model\n",
+    "import pickle\n",
+    "# Save it to a .bin file\n",
+    "with open(\"lin_reg.bin\", \"wb\") as f:\n",
+    "    pickle.dump(linear_reg, f)"
+   ]
   }
  ],
  "metadata": {
