intro to ml monitoring

--- a/01_intro/homework/homework.ipynb
+++ b/01_intro/homework/homework.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "7a2546a6",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "id": "bd6e3caa",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "id": "a7da3558",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "71a095e9",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "901ca3c7",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "3066766"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "e8769d37",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "Name: trip_duration, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "31d1917d",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "20c4f4ec",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/55/x1yqz6851xj6j2f0smdhs4jh0000gn/T/ipykernel_23287/2209579791.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/55/x1yqz6851xj6j2f0smdhs4jh0000gn/T/ipykernel_86037/2297012172.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -238,7 +238,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "d0205573",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "8d7bf642",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "092d3d22",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "fa7fb2fe",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/55/x1yqz6851xj6j2f0smdhs4jh0000gn/T/ipykernel_23287/660958077.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/55/x1yqz6851xj6j2f0smdhs4jh0000gn/T/ipykernel_86037/660958077.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "49469ab4",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b005ab47",
    "metadata": {},
    "outputs": [],
@@ -476,8 +476,8 @@
     "## export the model\n",
     "import pickle\n",
     "# Save it to a .bin file\n",
-    "with open(\"lin_reg.bin\", \"wb\") as f:\n",
-    "    pickle.dump(linear_reg, f)"
+    "with open(\"lin_reg.bin\", \"wb\") as f_out:\n",
+    "    pickle.dump((dv, linear_reg), f_out)"
    ]
   }
  ],
