--- a/04_deployment/web_service_mlflow/random-forest.ipynb
+++ b/04_deployment/web_service_mlflow/random-forest.ipynb
@@ -104,10 +104,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "c73081e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 20, 'n_estimators': 100, 'min_samples_leaf': 10, 'random_state': 0} 6.7558229919200725\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31m2025/05/16 12:08:47 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏃 View run clumsy-slug-591 at: http://127.0.0.1:5001/#/experiments/737559958796346335/runs/486c91b7aae84fae8d84eef0332d8573\n",
+      "🧪 View experiment at: http://127.0.0.1:5001/#/experiments/737559958796346335\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run():\n",
     "    params = dict(max_depth=20, n_estimators=100, min_samples_leaf=10, random_state=0)\n",
