--- a/04_deployment/homework/starter.ipynb
+++ b/04_deployment/homework/starter.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "0ef880a0",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "41c08294",
    "metadata": {},
    "outputs": [],
@@ -86,20 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "4854399a",
    "metadata": {},
    "outputs": [],
    "source": [
     "year = 2023\n",
-    "month = 3\n",
+    "month = 5\n",
     "\n",
     "df = read_data(f'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_{year:04d}-{month:02d}.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "669fda0a",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "bf532ae7-1897-428c-ba0c-875ccaf7d76c",
    "metadata": {},
    "outputs": [
@@ -119,12 +119,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Standard deviation of predictions: 6.25\n"
+      "Standard deviation of predictions: 6.26\n",
+      "Mean of predictions: 14.24\n"
      ]
     }
    ],
    "source": [
-    "print(f'Standard deviation of predictions: {y_pred.std():.2f}')"
+    "print(f'Standard deviation of predictions: {y_pred.std():.2f}')\n",
+    "print(f'Mean of predictions: {y_pred.mean():.2f}')"
    ]
   },
   {
